<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="261dp"
        android:layout_height="365dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/two"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/three" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/six" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/nine" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/plus" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="260dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="85dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/textViewNum"
        android:layout_width="257dp"
        android:layout_height="55dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>